implementations/rust/ockam/ockam_node_test_attribute/tests/node_test/pass_if_unused_context.stderr
error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/pass_if_unused_context.rs:4:1
  |
4 | / #[ockam_node_test_attribute::node_test]
5 | | async fn my_test(_ctx: &mut ockam::Context) -> ockam::Result<()> {
6 | |     // _ctx.stop().unwrap();
7 | |     let _x = 42 as u8;
8 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node_test/pass_if_unused_context.rs`
